# flaskSample

./: .dockerignore  .gitignore  Dockerfile  JenkinsDockerfile  Jenkinsfile  app.py  compose.yaml  pyproject.toml  requirements.txt  test_xd.py
templates/: home.html  index.html  sucessPage.html
